--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,6 +1,14 @@
 body {
   font-family: 'Inter', sans-serif;
-  background: linear-gradient(95deg, #1D3557 0%, #0F172A 100%);
+  background: /* 1 */
+		var(--pattern, 
+			radial-gradient(closest-side, #777, #fff) 
+				0/ 1em 1em space), 
+		var(--map, 
+			linear-gradient(95deg, #1D3557 0%, #0F172A 100%));
+	background-blend-mode: multiply /* 2 */;
+	filter: contrast(21) /* 3 */
+  /*background: linear-gradient(95deg, #1D3557 0%, #0F172A 100%);*/
   color: #e5e7eb;
   margin: 0;
   padding: 0;
@@ -83,7 +91,7 @@ body {
   position: absolute;
   top: 0;
   left: -20%;
-  width: 100%;  /* Reducimos el ancho para un efecto más sutil */
+  width: 100%;  
   height: 100%;
   background: linear-gradient(
     90deg,  /* Cambiado a 90deg para que sea completamente horizontal */
